# radionets

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGES.rst  CITATION.cff  LICENSE  MANIFEST.in  README.md  environment-dev.yml  environment.yml  environment_2.yml  hello.py  pyproject.toml  setup.cfg  setup.py  test.sh  towncrier.toml  travis.yml
.github/workflows/: changelog.yml  ci.yml
dl_framework/: architecture.py  architectures.py  callbacks.py  data.py  hooks.py  hooks_fastai.py  inspection.py  learner.py  logger.py  loss_functions.py  model.py  optimizer.py  param_scheduling.py  preprocessing.py  regularization.py  test_hook.py  training.py  uncertainty_arch.py  utils.py
dl_framework/architectures/: basics.py  filter_deep.py  unet.py
dl_training/: utils.py
dl_training/scripts/: default_train_config.toml  start_training.py
docs/changes/: 129.feature.rst  129.maintenance.rst  134.maintenance.rst  136.maintenance.rst  140.api.rst  140.bugfix.rst  140.bugfixes.rst  140.feature.rst  141.maintenance.rst  142.maintenance.rst  143.optimization.rst  144.feature.rst  145.bugfix.rst  146.feature.rst  146.maintenance.rst  148.maintenance.rst  149.bugfix.rst  150.feature.rst  151.feature.rst  152.bugfix.rst  152.feature.rst  153.maintenance.rst  154.maintenance.rst  155.bugfix.rst  155.feature.rst  159.maintenance.rst  160.maintenance.rst  161.feature.rst  162.bugfix.rst  162.feature.rst  163.maintenance.rst  164.bugfix.rst  165.feature.rst  166.maintenance.rst  167.optimization.rst  168.optimization.rst  169.maintenance.rst  170.maintenance.rst  171.bugfix.rst  171.maintenance.rst  (+6 more)
examples/: 00_observation_simulation.ipynb  01_dataset_simulation.ipynb  02_model_training.ipynb  03_model_evaluation.ipynb  04_filter_deep.ipynb  07_benchmark_testset.ipynb  Archs&Losses.ipynb  default_eval_config.toml  default_simulation_config.toml  default_train_config.toml  paper_large.rc  paper_large_3_2.rc  paper_small.rc  test_ci.py  test_nb.py
examples/.rc/: simulation_extended_gaussians.toml  simulation_fourier_amp.toml  simulation_fourier_real.toml  simulation_local.toml  simulation_mix.toml  simulation_pointlike_gaussians.toml  simulation_pointsources.toml  simulation_source_list.toml  training_filter_deep.toml  training_filter_deep_amp.toml  training_filter_deep_phase.toml
examples/filter_deep_toml/: training_filter_deep.toml
examples/matplotlib_rcs/: paper_large_3.rc  paper_long.rc  paper_small.rc
gauss/: Makefile  calculate_normalization.py  create_gauss_fft.py  create_gauss_fft_sampled.py  create_gauss_testset.py  create_input_plot.py  create_mnist_fft_sampled.py  find_lr.py  inspection.py  preprocessing.py  test_normalization.py  train_cnn.py  utils.py
gauss/evaluation/: Makefile  average_loss.py  average_ssim.py  blob_detection.py  iqr_msssim.py  iqr_ssim.py  peak_detection.py  ssim.py  utils.py
gauss/models/: 1000epochs.models
gauss/visualize/: Makefile  predictions.py  visualize_prediction.py
gaussian_sources/: .makerc_example  Makefile  calculate_normalization.py  create_fft_pairs.py  fft_tests.py  find_lr.py  inspection.py  plot_loss.py  preprocessing.py  simulate_bundles.py  train_cnn.py  visualize.py
gaussian_sources/visualize/: .makerc_example  Makefile  mean_msssim.py  save_predictions.py  visualize_predictions.py  visualize_preprocessing.py
mnist_cnn/: .makerc_example  Makefile  calculate_normalization.py  create_fft_sampled.py  create_mnist_fft.py  create_mnist_fft_sampled.py  find_lr.py  inspection.py  mnist_cnn.py  mnist_cnn_big.py  model.py  plot_loss.py  preprocessing.py  train_cnn.py  training  training.py  utils.py
mnist_cnn/models/: cnn_architecture.py
mnist_cnn/sampling/: freq_sampling.py  sampling.py
mnist_cnn/scripts/: calculate_normalization.py  create_fft_sampled.py  create_mnist_fft.py  find_lr.py  plot_loss.py  train_cnn.py  utils.py  visualize.py  visualize_predictions.py  visualize_preprocessing.py
mnist_cnn/visualize/: .Makefile.swp  Makefile  predictions.py  utils.py  visualize_prediction.py  visualize_predictions.py  visualize_preprocessing.py
new_tests/: conftest.py  evaluate.toml  simulate.toml  test_evaluation.py  test_simulation.py  test_training.py  training.toml
pointsources/: Makefile  calculate_normalization.py  create_mnist_fft.py  create_pointsource_fft_sampled.py  create_pointsources_fft.py  create_pointsources_testset.py  find_lr.py  preprocessing.py  test_normalization.py  train_cnn.py  utils.py
pointsources/evaluation/: Makefile  average_loss.py  average_msssim.py  average_ssim.py  blob_detection.py  iqr_msssim.py  iqr_ssim.py  msssim.py  peak_detection.py  utils.py  visualize_blobs.py  visualize_peaks.py
pointsources/visualize/: Makefile  predictions.py  visualize_preprocessing.py
pytorch_msssim/: __init__.py
radionets/: CITATION.cff  __init__.py
radionets/dl_framework/: architecture.py  callbacks.py  clustering.py  data.py  hook_fastai.py  hooks.py  inspection.py  learner.py  logger.py  loss_functions.py  metrics.py  model.py  partial_data.py  regularization.py  uncertainty_arch.py  utils.py  (+1 more)
resources/: create_mnist_small.py
sampling/: Gaussian_sources.py  source_simulations.py  uv_plots.py  uv_simulations.py
simulations/: Gaussian_sources.py  Makefile  README.md  gaussian_simulations.py  gaussians.py  mnist.py  sampling.py  simulate.py  source_simulations.py  utils.py  uv_plots.py  uv_simulations.py  valid_mb.py  visualize_sampling.py
source_detection/: Testing.ipynb  data_augmentation.py  evaluation.py  loss.py  model.py  source_data.py  source_utils.py  train.py  yolo_data.ipynb  yolo_model.yaml  yolo_settings.yaml
tests/: conftest.py  evaluate.toml  mnist_train.h5  simulate.toml  test_dataset_creation.py  test_eval_plots.py  test_evaluation.py  test_gaussian_simulations.py  test_mnist_normalization.py  test_save_load_preds.py  test_simulation.py  test_training.py  test_uv_plots.py  test_uv_simulations.py  training.toml
tracking/: evaluate_jet.toml  evaluate_survey.toml  jet_evaluation.py  training_jet.toml
utilities/: travis_setup.sh
(+148 files in other folders)
